# graphitiNoobPOC

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: document-1.md  document-2.md  document-3.md
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js  window-controls.js
notebooks/: stage_01.ipynb  stage_01.py
src/api/route/: ingestion.py  retrieval.py
src/config/: settings.py
src/data_Ingestion/: agent.py
src/data_retrive/: agent.py
src/examples/: ingest_document.py  search_knowledge.py
src/models/: search.py
src/prompts/: ingestion_prompts.py  retrieval_prompts.py
src/utils/: mcp_client.py  memory.py  session_manager.py
